# bsv-treesitter

./: .gitignore  COPYRIGHT.md  Cargo.toml  Makefile  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yaml
bindings/c/tree_sitter/: tree-sitter-bsv.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bsv/: parse.py
bindings/rust/: build.rs  lib.rs
test/corpus/: example1.txt  example_enum.txt  example_function.txt  example_module.txt  example_typecast.txt  moduleinstance.txt
