[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-bsv"
description = "Bluespec system verilog treesitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "bsv"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Vijayvithal", email = "jahagirdar.vs@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/jahagirdar/bsv-treesitter.git"
Funding = "https://github.com/jahagirdar/bsv-treesitter.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
