[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "tree-sitter-bsv"
description = "Bluespec system verilog treesitter"
dynamic = ["version"]
dependencies = ["tree-sitter>=0.25.2"]
keywords = ["incremental", "parsing", "tree-sitter", "bsv"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Vijayvithal", email = "jahagirdar.vs@gmail.com" }]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/jahagirdar/bsv-treesitter.git"
Funding = "https://github.com/jahagirdar/bsv-treesitter.git"

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
test-command = "python -c \"import tree_sitter_bsv; from tree_sitter import Language, Parser; Parser(Language(tree_sitter_bsv.language()))\""
